--- a/src/style/AdminPanelStyle.module.css
+++ b/src/style/AdminPanelStyle.module.css
@@ -18,3 +18,11 @@ td, th{
     flex-direction: column;
     align-items: center;
 }
+
+.searchContainer{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    justify-content: space-evenly;
+    margin: 1%;
+}
