--- a/src/style/PokemonStyle.module.css
+++ b/src/style/PokemonStyle.module.css
@@ -1,14 +1,15 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    text-align: center;
-    align-items: center;
-    margin: 10% auto 0 auto;
-    width: 50vmin;
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  text-align: center;
+  align-items: center;
+  margin: 2% auto 0 auto;
+  width: 80%;
+  height: 80%;
 }
 
-.deleteButton{
-    width: 40vmin;
-    margin: 1%;
+.deleteButton {
+  width: 40vmin;
+  margin: 1%;
 }
