--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,12 +1,13 @@
 * {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    background-color: rgb(240, 240, 240);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(240, 240, 240);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#root{
-    height: 100%;
+#root {
+  height: 100%;
+  width: 100%;
 }
