--- a/src/style/LobbyStyle.module.css
+++ b/src/style/LobbyStyle.module.css
@@ -1,3 +1,23 @@
 .title {
   color: red;
 }
+
+.square {
+  width: 100px;
+  height: 100px;
+}
+
+.green {
+  background-color: green;
+}
+
+.red {
+  background-color: red;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
