--- a/src/style/ChatStyle.module.css
+++ b/src/style/ChatStyle.module.css
@@ -1,3 +1,51 @@
-.title{
-    color: rebeccapurple;
+.title {
+  color: rebeccapurple;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem auto;
+  width: min(300px, calc(70% + 100px));
+  border: 2px solid hsl(0, 0%, 50%);
+  border-radius: 5px;
+}
+
+.unOrderList {
+  list-style: none;
+  padding: 0.25rem;
+  margin: 0.25rem;
+  text-align: start;
+  width: 100%;
+  height: 500px;
+  border-top: 2px solid hsl(0, 0%, 50%);
+  border-bottom: 2px solid hsl(0, 0%, 50%);
+  background-color: hsl(0, 0%, 98%);
+  overflow-y: scroll;
+}
+
+.chatServerMessage {
+  color: hsl(0, 0%, 50%);
+}
+
+.message {
+  width: 75%;
+  margin: 0 0.5rem;
+  padding: 0.3rem;
+}
+
+.submitMessageButton {
+  width: 15%;
+  margin: 0 0.5rem;
+  padding: 0.3rem;
+}
+
+.sendMessageContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 0.25rem;
 }
